--- a/main.css
+++ b/main.css
@@ -102,3 +102,64 @@ li.navbarList a:hover:not(.active) {
   margin-right: auto;
   width: 80%;
 }
+
+@media screen and (max-width: 480px) {
+  .profileImage{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+  }
+  
+  .profileDetails{
+    margin-left: auto;
+    margin-right: auto;
+    width:85%;
+    display: flex;
+  }
+  
+  .inlineProfile{
+    flex: 50%;
+    padding: 5px;
+  }
+  
+  .education{
+    margin-left: auto;
+    margin-right: auto;
+    width: 98%;
+  }
+  
+  #educationDetails{
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #educationDetails td, #educationDetails th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #educationDetails tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #educationDetails tr:hover {background-color: #ddd;}
+  
+  #educationDetails th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #007bff;
+    color: white;
+  }
+  
+  .experience{
+    margin-left: auto;
+    margin-right: auto;
+    width: 98%;
+  }
+  
+  .content{
+    margin-top: 50px;
+    margin-bottom: 45px;
+}
+}
